--- a/HTML-CSS-and-Javascript-for-Web-Developers/Assignments/Module 2-Solution/style.css
+++ b/HTML-CSS-and-Javascript-for-Web-Developers/Assignments/Module 2-Solution/style.css
@@ -1,143 +1,103 @@
-* {
-  box-sizing: border-box;
-}
-body {
-  background-color: #9e8851;
-}
-h1 {
-  margin: 100px;
-  text-align: center;
-  font-family: Helvetica;
-  font-weight: bold;
-  font-size: 175%;
-}
-section {
-  position: relative;
-  padding: 15px;
-  width: 100%;
-}
-p {
-  position: relative;
-  clear: right;
-}
-div {
-  position: relative;
-  background-color: #bf7f3f;
-  border: 1px solid black;
-  width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: auto;
-}
-.sub {
-  float: right;
-  width: 100px;
-  padding: 5px;
-  margin: 0px;
-  border: 1px solid black;
-  text-align: center;
-  font-size: 125%;
-  font-weight: bold;
-  background-color: #b0d619;
-}
-.content {
-  padding: 5px;
-  border: none;
-  background-color: #bf7f3f;
-  font-family: Helvetica;
-  color: black;
-  margin: 0px;
-  height: 200px;
-  overflow: auto;
-}
-
-.row {
-  width: 90%;
-}
 
 * {
   box-sizing: border-box;
 }
-body {
-  background-color: #9e8851;
+
+body{
+	margin: 0;
+	padding: 0;
+  font-family: "Comic Sans MS", cursive, sans-serif;
 }
+
+.row{
+  margin-top: 5%;
+  margin-bottom: 5%;
+}
+
 h1 {
-  margin: 100px;
+  margin-bottom: 15px;
   text-align: center;
-  font-family: Helvetica;
-  font-weight: bold;
-  font-size: 175%;
+  color: #ff4532;
+  font-size: 50px;
 }
-section {
-  position: relative;
-  padding: 15px;
+
+
+.box{
   width: 100%;
+  overflow: none;
 }
-p {
-  position: relative;
-  clear: right;
-}
-div {
-  position: relative;
-  background-color: #bf7f3f;
-  border: 1px solid black;
-  width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: auto;
-}
-.sub {
-  float: right;
+
+
+.content-name{
+  overflow: none;
+  text-align: center;
+  border: 4px solid black;
   width: 100px;
+  height: 40px;
   padding: 5px;
-  margin: 0px;
-  border: 1px solid black;
-  text-align: center;
-  font-size: 125%;
+  float: right;
+  margin-right: 36px;
+  margin-top: 0px;
   font-weight: bold;
-  background-color: #b0d619;
-}
-.content {
-  padding: 5px;
-  border: none;
-  background-color: #bf7f3f;
-  font-family: Helvetica;
-  color: black;
-  margin: 0px;
-  height: 200px;
-  overflow: auto;
+  position: relative;
 }
 
-.row {
+.content{
+  border: 5px solid black;
   width: 90%;
+  height: auto;
+  margin: 2.5%;
+  color: black
+  font-size: 25px;
+  padding: 2%;
+  padding-top: 55px;
+  background-color: rgba(0,0,0,0.3);
 }
 
-/*desktop version*/
+.name1{
+  background-color: #FFB6C1;
+}
+
+.name2{
+  color: white;
+  background-color: #FF0000;
+}
+.name3{
+  background-color: #FFFF00;
+}
+
+
+/********** Large devices only **********/
 @media (min-width: 992px) {
-  .column-lg-4 {
-    float: left;
+  .col-lg-4 {
+  	float: left;
     width: 33.33%;
   }
 }
-/*tablet version*/
+/********** Medium devices only **********/
 @media (min-width: 768px) and (max-width: 991px) {
-  .colmn-md-6 {
+  .col-md-6,.col-md-12 {
     float: left;
-    width: 50%;
-    margin-left: auto;
-    margin-right: auto;
   }
-  .colmn-md-12 {
-    float: left;
+  .col-md-6 {
+    width: 50%;
+  }
+  .col-md-12 {
+    margin-left: -10px;
     width: 100%;
-    margin-left: auto;
-    margin-right: auto;
+  }
+  .name3{
+    margin-right: 65px;
+    width: 100px;
   }
 }
-/*mobile version*/
-@media (max-width: 767px) {
-  .colmn-sm-12 {
-    float: left;
+
+@media (min-width: 0px) and (max-width: 767px) {
+  .col-sm-12 {
+  	float: left;
     width: 100%;
+  }
+  .content-name{
+    margin-right: 30px;
   }
 }
